Fix overflow screen

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,9 @@
     hsla(317, 100%, 53%, 0.8)
   ) !important;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
